Java 21 #15
- deprecated new URL() to URI.create('').toURL();